<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="button_entrar">Entrar</string>
    <string name="cadastre">Não tem conta? Cadastre-se</string>
    <string name="cadastro">Cadastrar</string>
    <string name="nome_usuario">Digite seu nome</string>
    <string name="esqueceu_senha">Esqueci a senha.</string>
    <string name="pesquisar_title_toolbar_menu">pesquisar</string>
    <string name="menu_config">Configurações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_ajuste">Esse não é o seu nome de usuário nem sua senha. Esse nome ficara visivel para seus contatos no WhatsApp</string>
    <string name="usuario_text">Nome do usuário</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="title_activity_cadastra_grupo">CadastraGrupoActivity</string>
    <string name="nome_grupo">Nome do grupo</string>
    <string name="padrao_grupo">Defina um nome e uma imagem opcional para o grupo</string>
</resources>
